# Endfield-Gacha-Assistant

./: .gitignore  LICENSE  README.md  build.ps1  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-release.yml
scripts/: compact-build.mjs  compress-upx.ps1
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  webdav.rs
src/app/: App.tsx
src/app/hooks/: contexts.ts  useAuth.ts  useBootstrap.ts  useData.ts  useNotifications.ts  useSync.ts  useTheme.ts
src/components/: AvatarImg.tsx  ErrorBoundary.tsx  PityHistogram.tsx  PityProgressBar.tsx  PullTimeline.tsx  RarityDonut.tsx  ToastViewport.tsx
src/domain/: types.ts
src/lib/: date-utils.ts  rarity-utils.ts  runtime.ts
src/modules/account/: types.ts
src/modules/import-export/: legacyAdapter.test.ts  legacyAdapter.ts  records.test.ts  records.ts  service.ts
src/modules/metadata/: catalog.ts  poolJson.ts  remoteAssets.test.ts  remoteAssets.ts
src/modules/official-api/: client.integration.test.ts  client.ts  types.ts
src/modules/pool-management/: files.ts  service.ts
src/modules/skland-checkin/: config.ts  service.ts
src/modules/stats-engine/: summary.test.ts  summary.ts
src/pages/: AboutPage.tsx  AccountsPage.tsx  CheckInPage.tsx  PoolBrowserPage.tsx  PoolEditModal.tsx  RecordsPage.tsx  SettingsPage.tsx  StatisticsPage.tsx
src/styles/: index.css
(+33 files in other folders)
