[package]
name = "endfield-gacha-assistant"
version = "1.1.0"
description = "Endfield Gacha Assistant"
authors = ["OpenCode"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
base64 = "0.22"
zip = "2"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
